# gpeopleapiwrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
gpeopleapiwrapper/: auth.py  base.py  client.py  groups.py  persons.py
tests/: test_date_value.py  test_persons_addresses.py  test_persons_base.py  test_persons_birthdays.py  test_persons_date_value_mixins.py  test_persons_email_addresses.py  test_persons_events.py  test_persons_names.py  test_persons_phone_numbers.py  test_persons_string_value_mixins.py  test_persons_type_mixins.py
tests/fixtures/: tester_average.json  tester_duplicates.json  tester_empty.json  tester_eva.json  tester_extensive.json  tester_klaus.json
